[package]
name = "anweb"
version = "0.1.0"
authors = ["Aleksey Astakhov <madmonkey@mail.ru>"]
edition = "2018"

[dependencies]
mio = "0.6"
slab = "0.4.4"
num_cpus = "1"
sha-1 = "0.9.8"
base64 = "0.13.0"
rustls = "0.19.1"
percent-encoding = "2.1.0"
deflate = { version = "0.9.1", features = ["gzip"] }
chrono = "0.4.19"
md5 = "0.7.0"

[dev-dependencies]
rand = "0.7"
threadpool = "1.8.1"
